--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,98 @@
-.text-custom-color {
-    color: #DDE2FF;
+.dashboard-side-nav{
+    left: 40px; 
+    top: 41px;
+    opacity: 0.70; 
+    color: #A4A6B3; 
+    font-size: 19px; 
+    font-family: "Mulish", sans-serif;
+    font-weight: 700; 
+    letter-spacing: 0.40px; 
+    word-wrap: break-word"
+
 }
+.custom-sidebar-bg {
+    background-color: #363740;
+}
+
+.item-sidebar{
+    width: 159px;
+    left: 50px; 
+    top: 18px; 
+    position: absolute; 
+    color: #DDE2FF; 
+    font-size: 16px; 
+    font-family: "Mulish", sans-serif;
+    font-weight: 400; 
+    line-height: normal; 
+    letter-spacing: 0.2px;
+
+}
+.items-sidebar{
+    width: 159px;
+    left: 50px; 
+    top: 18px; 
+    position: absolute; 
+    color: #A4A6B3; 
+    font-size: 16px; 
+    font-family: "Mulish", sans-serif;
+    font-weight: 400; 
+    line-height: normal; 
+    letter-spacing: 0.2px;
+
+}
+#tickets{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 184px ; 
+    position: absolute;
+}
+#ideas{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 240px; 
+    position: absolute;
+}
+#contacts{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 296px; 
+    position: absolute;
+}
+#agents{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 352px; 
+    position: absolute;
+}
+#articles{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 408px; 
+    position: absolute;
+}
+#settings{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 496px; 
+    position: absolute;
+}
+#suscription{
+    width: 255px; 
+    height: 56px; 
+    left: 0px; 
+    top: 552px; 
+    position: absolute;
+}
+/* .sidebar-svg{
+    width: 16px;
+    height: 16px;
+    top: 20px;
+    left: 32px !important;
+
+} */
