--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11864,10 +11864,9 @@ body {
   background-color: #363740;
 }
 
-.item-sidebar, .items-sidebar {
+.items-sidebar {
   width: 159px;
   left: 50px;
-  top: 18px;
   position: absolute;
   font-family: "Mulish", sans-serif;
   font-size: 16px;
@@ -11876,8 +11875,9 @@ body {
   letter-spacing: 0.2px;
 }
 
-.item-sidebar {
+.overview {
   color: #DDE2FF;
+  top: 128px;
 }
 
 .items-sidebar {
@@ -11917,6 +11917,36 @@ body {
 
 #subscription {
   top: 552px;
+}
+
+#overview-title {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+#James-Name {
+  width: 109px;
+  height: 18px;
+  left: 955px;
+  top: 13px;
+  text-align: right;
+  color: #252733;
+  font-size: 14px;
+  margin: 10px;
+}
+
+#James-pic {
+  width: 44px;
+  height: 44px;
+  left: 1078px;
+  object-fit: cover;
+  border-radius: 100%;
+  border: 2px solid #DFE0EB;
+  padding: 2px;
+}
+
+#search {
+  margin-right: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
