--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,9 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
+
 
 $font-mulish: "Mulish", sans-serif;
 
 body {
-  font-family: $font-mulish;
+  font-family: $font-mulish !important;
   background-color: #F7F8FC;
 }
 
@@ -18,6 +18,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.40px;
   word-wrap: break-word;
+  
 }
 
 .custom-sidebar-bg {
@@ -44,6 +45,14 @@ body {
 
 .items-sidebar {
   color: #A4A6B3;
+
+}
+
+.overview.items-sidebar {
+  display: flex;
+  align-items: center;
+  color: #DDE2FF;
+  top: 128px;
 }
 
 #tickets,
@@ -91,7 +100,8 @@ body {
 
 .header,
 .data-container,
-.chart-container {
+.chart-container,
+.bottom-container {
   font-family: $font-mulish;
 }
 
@@ -126,6 +136,8 @@ body {
 }
 
 
+
+
 $primary-color: #007bff;
 
 body {
@@ -154,6 +166,8 @@ th {
 td {
   text-align: right;
 }
+
+
 
 .card {
   display: flex;
@@ -184,6 +198,9 @@ td {
   font-size: 19px;
 }
 
+
+
+
 .chart-container {
   background-color: white;
   border: 1px solid #DFE0EB;
@@ -192,12 +209,22 @@ td {
   position: relative;
   .row >div:last-child{
     .row{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       border-bottom: 1px solid #e0e0e0;
       padding-bottom: 5px;
     }
   }
+
 }
 
+
+
+.number{
+  font-size: 24px !important;
+  font-weight: bold 24;
+}
 
 $text-color: #333;
 
@@ -224,10 +251,14 @@ p {
   color: $text-color;
 }
 
-.bottom-container .row{
+.bottom-container {
+  font-family: $font-mulish ; // Adding Mulish font to the bottom container
+}
+
+.bottom-container .row {
   padding: 0;
   margin: 0 1rem;
-  >div{
+  > div {
     width: 49.5%;
     padding: 0;
     .container {
@@ -241,19 +272,19 @@ p {
         padding: 0;
         margin: 0;
         border-bottom: 1px solid #e0e0e0;
-        &:first-child .col-8{
+        &:first-child .col-8 {
           display: block;
         }
-        .col-8{
+        .col-8 {
           display: flex;
         }
-        .col-2{
+        .col-2 {
           text-align: right;
         }
       }
     }
-    //first child right marg 1%
-    &:first-child{
+
+    &:first-child {
       margin-right: 1%;
     }
   }
